# autopost-studio

./: .gitignore  README.md  go.command  package-lock.json  package.json  seed.mjs  server.mjs
lib/: ai.mjs  backup.mjs  browser.mjs  db.mjs  publish.mjs  render.mjs  template-spec.mjs  updater.mjs
lib/publishers/: douyin.mjs  mp.mjs  wxsph.mjs  xhs.mjs
scripts/: build-update.mjs  stage-bundle.mjs  upload.sh  upload.sh.example
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
web/: app.js  index.html  style.css
