[package]
name = "autopost-studio"
version = "1.0.0"
description = "autopost-studio desktop"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
